; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_subr.c_vauth_node_group.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_subr.c_vauth_node_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode_attr = type { i32 }

@va_gid = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vnode_attr*, i32, i32*, i32)* @vauth_node_group to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vauth_node_group(%struct.vnode_attr* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.vnode_attr*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.vnode_attr* %0, %struct.vnode_attr** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %11 = load %struct.vnode_attr*, %struct.vnode_attr** %5, align 8
  %12 = icmp ne %struct.vnode_attr* %11, null
  br i1 %12, label %13, label %30

13:                                               ; preds = %4
  %14 = load %struct.vnode_attr*, %struct.vnode_attr** %5, align 8
  %15 = load i32, i32* @va_gid, align 4
  %16 = call i64 @VATTR_IS_SUPPORTED(%struct.vnode_attr* %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %30

18:                                               ; preds = %13
  %19 = load i32, i32* %6, align 4
  %20 = load %struct.vnode_attr*, %struct.vnode_attr** %5, align 8
  %21 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @kauth_cred_ismember_gid(i32 %19, i32 %22, i32* %10)
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* @ENOENT, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %18
  %28 = load i32, i32* %8, align 4
  store i32 %28, i32* %9, align 4
  br label %29

29:                                               ; preds = %27, %18
  br label %30

30:                                               ; preds = %29, %13, %4
  %31 = load i32, i32* %9, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %36, label %33

33:                                               ; preds = %30
  %34 = load i32, i32* %10, align 4
  %35 = load i32*, i32** %7, align 8
  store i32 %34, i32* %35, align 4
  br label %36

36:                                               ; preds = %33, %30
  %37 = load i32, i32* %9, align 4
  ret i32 %37
}

declare dso_local i64 @VATTR_IS_SUPPORTED(%struct.vnode_attr*, i32) #1

declare dso_local i32 @kauth_cred_ismember_gid(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
